@@ -31,6 +31,7 @@
             Graphics: wrapString now also wraps on slashes (to allow wrapping of URLs)
             nRF5x: when connecting to other devices, allow a slave latency of 2 (might increase reliability)
             Fix `Got [ERASED] expecting X` when storage compacts while executing a function *in* storage on non-Bangle devices (fix #2431)
+            JIT: Fix crashes when code got too big for simple 2-byte jump instructions (fix #2433)
 
      2v19 : Fix Object.values/entries for numeric keys after 2v18 regression (fix #2375)
             nRF52: for SD>5 use static buffers for advertising and scan response data (#2367)
